--- a/Weather/Supporting Files/Info.plist
+++ b/Weather/Supporting Files/Info.plist
@@ -56,5 +56,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>To add your current location</string>
 </dict>
 </plist>
